--- a/client/tasks/task-page.html
+++ b/client/tasks/task-page.html
@@ -1,5 +1,16 @@
 <template name="taskPage">
-    {{>taskItem}}
+    <div class="task-content">
+        <h3>
+            <a href="{{pathFor 'taskPage'}}">{{title}}</a>
+            <span>{{submittedFormatted}}</span>
+        </h3>
+        <p>
+            Submitted by {{author}}
+            {{#if ownTask}}<a href="{{pathFor 'taskEdit'}}">Edit</a>{{/if}}
+        </p>
+        <h4>Description</h4>
+        <p>{{description}}</p>
+    </div>
     <div class="contributions">
         <h4>Contributions</h4>
         <div>
