--- a/client/layout.html
+++ b/client/layout.html
@@ -1,7 +1,7 @@
 <template name="layout">
     <div class="container">
         {{> header }}
-        {{> meteorErrors }}
+        {{> meteorMessages }}
         <div id="main" class="row-fluid">
             {{> yield}}
         </div>
