--- a/client/tasks/task-page.html
+++ b/client/tasks/task-page.html
@@ -15,7 +15,7 @@
         <h4>Contributions</h4>
         <div>
             {{#each contributions}}
-            <div class="contribution"><h5><span>{{quantity}}</span><a href="#">{{description}}</a></h5></div>
+            <div class="contribution"><h5><span class="badge">{{quantity}}</span><a href="#">{{description}}</a></h5></div>
             {{/each}}
         </div>
     </div>
